<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".UserDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="48dp"
            android:text="@string/text_user_details"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/details_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/details_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/person_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/ic_person"
                    android:contentDescription="@string/desc_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/email_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_email"
                    android:contentDescription="@string/desc_email"
                    app:layout_constraintStart_toStartOf="@id/person_image"
                    app:layout_constraintTop_toBottomOf="@id/person_image" />

                <ImageView
                    android:id="@+id/school_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="28dp"
                    android:src="@drawable/ic_school"
                    android:contentDescription="@string/desc_school"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/email_image"
                    app:layout_constraintTop_toBottomOf="@id/email_image" />

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    app:layout_constraintBottom_toBottomOf="@+id/person_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/person_image"
                    app:layout_constraintTop_toTopOf="@+id/person_image"
                    tools:text="Mark Jones" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/email_image"
                    app:layout_constraintTop_toTopOf="@+id/email_image"
                    tools:text="mark@jones.com" />

                <TextView
                    android:id="@+id/school_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    app:layout_constraintBottom_toBottomOf="@+id/school_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/school_image"
                    app:layout_constraintTop_toTopOf="@+id/school_image"
                    tools:text="Johnson State university, Ontario" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="68dp"
            android:padding="12dp"
            android:text="@string/text_logout"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/details_card"
            app:layout_constraintStart_toStartOf="@+id/details_card"
            app:layout_constraintTop_toBottomOf="@+id/details_card"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>